--- a/vote.html
+++ b/vote.html
@@ -32,6 +32,7 @@
 		<div class="caption dark animated wow pulse clearfix">
 			<h1>#Vote</h1>
 			<p>Front-End Development</p>
+			<a href="demo.html" target="blank" class="myButton">View Demo</a>
 			
 		</div>
 		
@@ -66,11 +67,9 @@
 		</ul>
 	</section>
 
-
-	<section >
-	
-
-
+	<section class="wrapper">
+		<embed src="work/img/vote.svg" class="animated wow fadeIn">
+	</section>
 
 
 
@@ -80,11 +79,9 @@
 			
 				<p>© All Copyrights reserved. <a href="index.html"> Eric Chi </a>2018</p>
 			</div>
-
-			
 		</div>		
 	</footer>
 	<!--  End footer  -->
-    <script src='../ga.js'></script>
+  
 </body>
 </html>
