--- a/vote.html
+++ b/vote.html
@@ -29,10 +29,13 @@
 			
 		</header>
 
-		<div class="caption dark animated wow pulse clearfix">
+		<div class="caption dark clearfix">
+			<div class="animated wow pulse">
 			<h1>#Vote</h1>
 			<p>Front-End Development</p>
-			<a href="demo.html" target="blank" class="myButton">View Demo</a>
+		</div>
+
+			<a href="demo.html" target="blank" class="myButton animated wow rubberBand" data-wow-delay=".2s">View Demo</a>
 			
 		</div>
 		
