--- a/demo.html
+++ b/demo.html
@@ -5,25 +5,14 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>#Vote</title>
 	<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
-	<meta name="description" content="" />
-	<meta name="keywords" content="" />
-	<meta name="author" content="" />
+	<meta name="description" content="Visualized statistics data of voters" />
+	<meta name="keywords" content="GoVote Voters love election" />
+	<meta name="author" content="YuCheng Chi Eric Chi" />
 
-  <!-- Facebook and Twitter integration -->
-	<meta property="og:title" content=""/>
-	<meta property="og:image" content=""/>
-	<meta property="og:url" content=""/>
-	<meta property="og:site_name" content=""/>
-	<meta property="og:description" content=""/>
-	<meta name="twitter:title" content="" />
-	<meta name="twitter:image" content="" />
-	<meta name="twitter:url" content="y" />
-	<meta name="twitter:card" content="" />
+ 
 
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-	<!--favicon
-    <link rel="icon" type="image/png" href="" sizes="16x16">
-	-->
+	
 	<link rel="stylesheet" href="work/Vote/style.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
@@ -134,7 +123,7 @@
 				<span> Transportation Statistics </span>	
 			</div>	
 
-			<img id="trans" src="work/vote/img/chart.png">
+			<img id="trans" src="work/Vote/img/chart.png">
 			
 		</div>
 	</div>
