--- a/vote.html
+++ b/vote.html
@@ -3,6 +3,7 @@
 <head>
 	<title>#Vote</title>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
 	<meta name="author" content="Eric Chi">
 	<meta name="description" content="#Vote Voting Statistics Portfolio Eric Chi"/>
 	<link rel="stylesheet" type="text/css" href="work/css/reset.css">
