--- a/SoCoolEng.html
+++ b/SoCoolEng.html
@@ -31,7 +31,7 @@
           ['Grammar',  33.2, 51.8],
           ['Pronunciation',  41, 78],
           ['Listening', 40.1, 73],
-          ['Expression Level3', 34, 58.6],
+          ['Expression Level', 34, 58.6],
           
         ]);
 
