--- a/vote.html
+++ b/vote.html
@@ -32,7 +32,7 @@
 			<p>Front-End Development</p>
 		</div>
 
-			<a href="demo.html" class="boton">
+			<a href="demo.html" class="boton animated wow rubberBand">
 			View Demo 
 			</a>
 			
