--- a/SoCoolEng.html
+++ b/SoCoolEng.html
@@ -110,7 +110,7 @@
 		</div>
 
 		<div class="animated wow fadeIn" data-wow-delay=".2s"><img src="work/img/clock.svg"><span  ><mark>Time</mark><br>Students have to study 10+ subjects per day, so they have limited time for English.</span></div>
-		<div class="animated wow fadeIn" data-wow-delay=".4s"><img src="work/img/grade.svg"><span><mark>Grade</mark><br>Students care about grade and English expression play a minimal role in grade.</span></div>
+		<div class="animated wow fadeIn" data-wow-delay=".4s"><img src="work/img/grade.svg"><span><mark>Grade</mark><br>Students care about grade and English expression plays a minimal role in grade.</span></div>
 		<div class="animated wow fadeIn" data-wow-delay=".6s"><img src="work/img/laugh.svg"><span><mark>Fascination</mark><br>Content of textbooks are usually boring or impractical. Students barely open or read them only if necessary. </span></div>
 	</section>
 
@@ -147,14 +147,14 @@
 
 
 		
-		<p class="animated wow rotateInDownLeft" id="s2">To reach our goal, we combined Youglish with textbooks. User can easily watch the film with vocabularies which included in textbooks. In this way, user not only learn the definition but also learn how to express them in a complete sentence. </p>
+		<p class="animated wow fadeInLeft" id="s2">To reach our goal, we combined Youglish with textbooks. User can easily watch the film with vocabularies which included in textbooks. In this way, user not only learn the definition but also learn how to express them in a complete sentence. </p>
 
-	 	<div style="padding:58.16% 0 0 0;position:relative;"><iframe class="animated wow rotateInDownRight" src="https://player.vimeo.com/video/301505056?title=0&byline=0&portrait=0" style="position:absolute;top:22%;left:40%;width:55%;height:55%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div>
+	 	<div style="padding:58.16% 0 0 0;position:relative;"><iframe class="animated wow fadeInRight" src="https://player.vimeo.com/video/301505056?title=0&byline=0&portrait=0" style="position:absolute;top:22%;left:40%;width:55%;height:55%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div>
 
-		<div style="padding: 58.16% 0 0 0;position:relative;"><iframe class="animated wow rotateInUpLeft" src="https://player.vimeo.com/video/301506640?title=0&byline=0&portrait=0" style="position:absolute;top:10%;left:5%;width:55%;height:55%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div>
+		<div style="padding: 58.16% 0 0 0;position:relative;"><iframe class="animated wow fadeInLeft" src="https://player.vimeo.com/video/301506640?title=0&byline=0&portrait=0" style="position:absolute;top:10%;left:5%;width:55%;height:55%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div>
 
 
-		<p class="animated wow rotateInUpRight" id="s3">Exposing to different intonation and accent helps user build their language sense. What’s more, we also pick serval pairs of word with similar pronunciation, users can listen from a variety of people and how them pronounce it. </p>
+		<p class="animated wow fadeInRight" id="s3">Exposing to different intonation and accent helps user build their language sense. What’s more, we also pick serval pairs of word with similar pronunciation, users can listen from a variety of people and how them pronounce it. </p>
 
 
 		
