--- a/index.html
+++ b/index.html
@@ -202,6 +202,17 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 								</div>
 							</div>
 						</div></a>
+						<div class="row">
+						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
+							<div class="project" style="background-image: url(images/img-5.jpg);">
+							<a href="QJ_Farm.html" target="blank"><div class="desc">
+									<div class="con">
+										<h1>QJ Farm</h1>
+										<span>UI/UX</span>
+									</div>
+								</div>
+							</div>
+						</div></a>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="project" style="background-image: url(images/img-2.jpg);">
 								<a href="vote.html" target="blank"><div class="desc">
