--- a/QJ_Farm.html
+++ b/QJ_Farm.html
@@ -45,7 +45,7 @@
 			<li class="animated wow fadeInDown" data-wow-delay=".2s">
 				
 				<h2>My Role</h2>
-				<p>UI/UX Designer<br>UI/UX Research</p>
+				<p>UI Designer<br>UX Researcher</p>
 			</li>
 			<li class="animated wow fadeInDown"  data-wow-delay=".4s">
 			
