--- a/index.html
+++ b/index.html
@@ -141,25 +141,25 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 								</div>
 							</div>
 							<div class="row">
-								<div class="col-md-3 animate-box" data-animate-effect="fadeInLeft">
+								<div class="col-md-3 animate-box" data-animate-effect="fadeInUp">
 									<div class="services color-1">
 										<span class="icon2"><i class="icon-bulb"></i></span>
 										<h3>Creative</h3>
 									</div>
 								</div>
-								<div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
+								<div class="col-md-3 animate-box" data-animate-effect="fadeInUp">
 									<div class="services color-2">
 										<span class="icon2"><i class="icon-fire2"></i></span>
 										<h3>Passionate</h3>
 									</div>
 								</div>
-								<div class="col-md-3 animate-box" data-animate-effect="fadeInTop">
+								<div class="col-md-3 animate-box" data-animate-effect="fadeInDown">
 									<div class="services color-3">
 										<span class="icon2"><i class="icon-paperplane"></i></span>
 										<h3>Innovative</h3>
 									</div>
 								</div>
-								<div class="col-md-3 animate-box" data-animate-effect="fadeInBottom">
+								<div class="col-md-3 animate-box" data-animate-effect="fadeInDown">
 									<div class="services color-4">
 										<span class="icon2"><i class="icon-target3"></i></span>
 										<h3>Challenging</h3>
@@ -203,7 +203,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 							</div>
 						</div></a>
 						<div class="row">
-						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
+						<div class="col-md-6 animate-box" data-animate-effect="fadeInDown">
 							<div class="project" style="background-image: url(images/img-5.jpg);">
 							<a href="QJ_Farm.html" target="blank"><div class="desc">
 									<div class="con">
