--- a/QJ_Farm.html
+++ b/QJ_Farm.html
@@ -11,9 +11,12 @@
 	<link rel="stylesheet" type="text/css" href="work/css/farm.css">
 	<link rel="icon" type="image/png" href="favicon.png" sizes="16x16">
     <script type="text/javascript" src="work/js/jquery.js"></script>
+    <script type="text/javascript" src="work/js/fancybox.js"></script>
+    <script type="text/javascript" src="work/js/fancybox-buttons.js"></script>
+    <script type="text/javascript" src="work/js/fancybox-media.js"></script>
+    <script type="text/javascript" src="work/js/fancybox-thumbs.js"></script>
     <script type="text/javascript" src="work/js/wow.js"></script>
     <script type="text/javascript" src="work/js/main.js"></script>
-   
 
 
 </head>
@@ -27,7 +30,7 @@
 
 		<div class="caption dark animated wow pulse clearfix">
 			<h1>QJ Farm</h1>
-			<p>UIUX</p>
+			<p>UI/UX</p>
 			<hr>
 		</div>
 		
@@ -63,7 +66,22 @@
 	</section><!--  End intro  -->
 
 
+	<section class="process wrapper">
+		<h2 class="animated wow fadeInUp">Process</h2>
+		<img class="animated wow fadeInUp" data-wow-delay=".2s" src="work/img/design_process.svg">
+	</section>
 
+
+	<section class="background wrapper">
+		<h2 class="animated wow fadeInUp">Background</h2>
+		<span class="animated wow fadeInUp">CSA is abbreviation of “Community-Supported Agriculture”. It is an alternative socioeconomic model of agriculture and food distribution that allows the producer and consumer to share the risks of farming. When consumers sharing the risking with QJ CSA farm, they can gain the organic and eco-friendly farm products as return. 
+		<br><br>
+		QJ CSA Farm is a medium scale farm located at the edge of city. People can drive there from downtown within 30 minutes. QJ Farm uses natural and organic method to produce every products. There are two goals of QJ Farm. First one is to create stable income and job opportunity for urban indigenous people. Second one is to provide a place where people can get touch with nature and learn the knowledge of our daily food.  </span>	
+
+		<img class="animated wow fadeInUp" src="work/img/IMG_4625.jpg">
+
+
+	</section>
 
 	<footer>
 		<div class="wrapper">
