--- a/QJ_Farm.html
+++ b/QJ_Farm.html
@@ -43,6 +43,7 @@
 	</div>
 		</div>
 
+
 	<section class="intro wrapper">
 		<ul class="clearfix">
 			<li class="animated wow fadeInDown" data-wow-delay=".2s">
@@ -66,6 +67,8 @@
 	</section><!--  End intro  -->
 
 
+
+
 	<section class="process wrapper">
 		<h2 class="animated wow fadeInUp">Process</h2>
 		<img class="animated wow fadeInUp" data-wow-delay=".2s" src="work/img/design_process.svg">
@@ -80,13 +83,40 @@
 
 		<img class="animated wow fadeInUp" src="work/img/IMG_4625.jpg">
 
+		<h2 class="animated wow fadeInUp">Challenge</h2>
+		<span class="animated wow fadeInUp">Generally speaking, CSA farm offers consumers regular farm products on a subscription or membership basis. It is the way how consumers sharing the risks with the farm. During the time when we did field research there, the subscription number was decreasing. It had brought the manager to consider to seek for some change.  </span>
 
 	</section>
+
+	<hr class="animated wow fadeIn">
+
+
+	<section class="research wrapper">
+		
+		<h1 class="animated wow fadeInUp">User Research</h1>
+		<div class="animated wow fadeInUp">
+		<h2>Contextual Inquiry</h2>
+		<span>As part of field research, we mainly relied on contextual inquiry to gain insight of users. We not only conducted contextual inquiries on all workers at QJ farm including the owner and the manager but also conducted it on 5 event attendants and consumers.
+		<br>
+		By observing users directly and recording their attitude, mood, reaction during real tasks, it brought us the information we couldn’t retrieve from interview. Through notes, photos and videos from different person and perspectives, we were able to discuss and integrate the opinions afterward and finally catch the core value of that users care.
+		</span>
+
+		<h2>Interview</h2>
+		<span>We conducted 4 semi-structured interview as well, including the manager of QJ farm and three consumers. The manager had been worked at the farm 3 years and one interviewee had been consumer of the farm for over 1 year, the others two had been consumer for less 1 year. Different from contextual inquiry, semi-structured interview provided us information within a narrow scale. With the information in a restricted scale, we spotted the common difficulties or problems that users would face during tasks. </span>
+		</div>
+
+		
+	</section>
+
+
+
 
 	<footer>
 		<div class="wrapper">
 			<div class="rights">
 			
+				
+				<p>Icons from <a href="https://www.flaticon.com/" 			    title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" 			    title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></p>
 				<p>© All Copyrights reserved. <a href="index.html"> Eric Chi </a>2018</p>
 			</div>
 
