--- a/SoCoolEng.html
+++ b/SoCoolEng.html
@@ -180,10 +180,12 @@
 	<footer>
 		<div class="wrapper">
 			<div class="rights">
+
+					<p>Icons from <a href="https://www.flaticon.com/" 			    title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" 			    title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></p>
 			
 				<p>© All Copyrights reserved. <a href="index.html"> Eric Chi </a>2018</p>
 			</div>
-
+		
 			
 		</div>		
 	</footer>
