--- a/QJ_Farm.html
+++ b/QJ_Farm.html
@@ -105,7 +105,7 @@
 		<span>We conducted 4 semi-structured interview as well, including the manager of QJ farm and three consumers. The manager had been worked at the farm 3 years and one interviewee had been consumer of the farm for over 1 year, the others two had been consumer for less 1 year. Different from contextual inquiry, semi-structured interview provided us information within a narrow scale. With the information in a restricted scale, we spotted the common difficulties or problems that users would face during tasks. </span>
 		</div>
 
-		<h2>Characteristics of QJ Farm</h2>
+		<h2>Challenges of QJ Farm</h2>
 		<span>We identified three challenges of QJ Farm form the interview with farm manager. </span>
 		<img src="work/img/line-graph.svg">
 		<img src="work/img/hourglass.svg">
