--- a/QJ_Farm.html
+++ b/QJ_Farm.html
@@ -84,7 +84,7 @@
 		<img class="animated wow fadeInUp" src="work/img/IMG_4625.jpg">
 
 		<h2 class="animated wow fadeInUp">Challenge</h2>
-		<span class="animated wow fadeInUp">Generally speaking, CSA farm offers consumers regular farm products on a subscription or membership basis. It is the way how consumers sharing the risks with the farm. During the time when we did field research there, the subscription number was decreasing. It had brought the manager to consider to seek for some change.  </span>
+		<span class="animated wow fadeInUp">Generally speaking, CSA farm offers consumers regular farm products on a subscription or membership basis. Consumers pay same fee and receive products without choosing what they want and stable product amount. If there is a rich harvest, consumers will receive more product than usual. On the other hand, there will be less products after natural disasters. It is the way how consumers share the risks with the farm. During the time when we did field research there, the subscription number was decreasing. It had brought the manager to consider to seek for some change.  </span>
 
 	</section>
 
@@ -99,22 +99,31 @@
 		<span>As part of field research, we mainly relied on contextual inquiry to gain insight of users. We not only conducted contextual inquiries on all workers at QJ farm including the owner and the manager but also conducted it on 5 event attendants and consumers.
 		<br>
 		By observing users directly and recording their attitude, mood, reaction during real tasks, it brought us the information we couldn’t retrieve from interview. Through notes, photos and videos from different person and perspectives, we were able to discuss and integrate the opinions afterward and finally catch the core value of that users care.
-		</span>
+		</span></div>
 
+		<div class="animated wow fadeInUp">		
 		<h2>Interview</h2>
 		<span>We conducted 4 semi-structured interview as well, including the manager of QJ farm and three consumers. The manager had been worked at the farm 3 years and one interviewee had been consumer of the farm for over 1 year, the others two had been consumer for less 1 year. Different from contextual inquiry, semi-structured interview provided us information within a narrow scale. With the information in a restricted scale, we spotted the common difficulties or problems that users would face during tasks. </span>
 		</div>
 
+		<div class="animated wow fadeInUp">
 		<h2>Challenges of QJ Farm</h2>
 		<span>We identified three challenges of QJ Farm form the interview with farm manager. </span>
+	   </div>
+		<div class="animated wow fadeIn">
+
 		<img src="work/img/line-graph.svg">
 		<img src="work/img/hourglass.svg">
 		<img src="work/img/update.svg">
+
 		<p id="d1"><mark>Unpredictable harvest</mark><br>Due to weather factor, harvest of the farm is unpredictable.</p> 
 		<p id="d2"><mark>Short shelf life</mark><br>The products of QJ Farm are mainly fresh food which have a short shelf life.</p> 
 		<p id="d3"><mark>Inventory update</mark><br>Inventory data needs to be update frequently because of unpredictable harvest and short shelf life.</p> 
+	    </div>
 
 	</section>
+
+
 
 
 
