--- a/QJ_Farm.html
+++ b/QJ_Farm.html
@@ -79,7 +79,7 @@
 		<h2 class="animated wow fadeInUp">Background</h2>
 		<span class="animated wow fadeInUp">CSA is abbreviation of “Community-Supported Agriculture”. It is an alternative socioeconomic model of agriculture and food distribution that allows the producer and consumer to share the risks of farming. When consumers sharing the risking with QJ CSA farm, they can gain the organic and eco-friendly farm products as return. 
 		<br><br>
-		QJ CSA Farm is a medium scale farm located at the edge of city. People can drive there from downtown within 30 minutes. QJ Farm uses natural and organic method to produce every products. There are two goals of QJ Farm. First one is to create stable income and job opportunity for urban indigenous people. Second one is to provide a place where people can get touch with nature and learn the knowledge of our daily food.  </span>	
+		QJ CSA Farm is a medium scale farm located at the edge of city. The farm practices in organic and eco-friendly agriculture without pesticide and chemistry involved. People can drive there from downtown within 30 minutes. There are two goals of QJ Farm. First one is to create stable income and job opportunity for urban indigenous people. Second one is to provide a place where people can get touch with nature and learn the knowledge of our daily food.  </span>	
 
 		<img class="animated wow fadeInUp" src="work/img/IMG_4625.jpg">
 
@@ -116,15 +116,20 @@
 		<img src="work/img/hourglass.svg">
 		<img src="work/img/update.svg">
 
-		<p id="d1"><mark>Unpredictable harvest</mark><br>Due to weather factor, harvest of the farm is unpredictable.</p> 
-		<p id="d2"><mark>Short shelf life</mark><br>The products of QJ Farm are mainly fresh food which have a short shelf life.</p> 
-		<p id="d3"><mark>Inventory update</mark><br>Inventory data needs to be update frequently because of unpredictable harvest and short shelf life.</p> 
+		<p id="d1"><mark>Unpredictable harvest</mark><br>Due to weather factor, harvest of the farm is <strong>unpredictable</strong>.</p> 
+		<p id="d2"><mark>Short shelf life</mark><br>The products of QJ Farm are mainly fresh food which have a <strong>short shelf life</strong>.</p> 
+		<p id="d3"><mark>Inventory update</mark><br>Inventory data needs to be <strong>update frequently</strong> because of unpredictable harvest and short shelf life.</p> 
 	    </div>
 
 	</section>
 
 
+	<section class="value wrapper">
+		
+	<h2>Core values that user cares </h2>
+	<span>Deprived from contextual inquiries and interviews, we defined three core values that user cares the most.</span>
 
+	</section>
 
 
 
