--- a/QJ_Farm.html
+++ b/QJ_Farm.html
@@ -125,9 +125,35 @@
 
 
 	<section class="value wrapper">
-		
+	<div class="animated wow fadeInUp">
 	<h2>Core values that user cares </h2>
 	<span>Deprived from contextual inquiries and interviews, we defined three core values that user cares the most.</span>
+	</div>
+
+	<div class="animated wow fadeInUp">
+	<p class="t">"Flexibility"</p>
+
+	<p class="c">User desires flexibility about the regular received products from QJ Farm. Users want to choose what and how many they want to receive each time. For example, during summer or winter break, family usually go on a trip for a longer period of time than usual. They still receive the regular products even if they aren’t at home because they cannot cease the subscription for a short period of time.</p>
+	</div>
+
+	<div class="animated wow fadeInUp">
+	<p class="t">"Convenience"</p>
+
+	<p class="c">User seeks some convenience when it comes to order food from QJ Farm. In traditional way, consumers can either make a phone call or go to the farm directly to order products. However, there is only 5 workers including manager in the farm. At most of time, they all working in the farm instead of staying in the office. Consumers usually have troubles to make an order except subscription.</p>  
+	</div>
+	<div class="animated wow fadeInUp">
+	<p class="t">"Predictability"</p>
+
+	<p class="c">User cares about want will they receive recently. Although QJ Farm notifies consumers one day before their regular receiving, consumers still looking for more information for them to do other decisions. Consumers still purchase fresh goods from other marketplace. If they can know how many and what will they receive from QJ Farm earlier, they will know what should buy or not buy during other shopping.</p>
+	</div>
+	<div class="animated wow fadeInUp">
+	<h2>Persona</h2>
+	<span>Based on the behavior patterns and core values of user found in research. We made two personas to represent our potential users.</span>
+	</div>
+
+
+	<img src="work/img/persona1.svg" class="animated wow fadeIn">
+	<img src="work/img/persona2.svg" class="animated wow fadeIn"> 
 
 	</section>
 
