--- a/QJ_Farm.html
+++ b/QJ_Farm.html
@@ -155,9 +155,10 @@
 
 
 	<section class="ideation">
-
+	<div class="animated wow fadeInDown">
 	<h1>Ideation</h1>
-
+	</div>
+	<div class="animated wow fadeInDown">
 	<h2>Persona</h2>
 	<span>Based on the behavior patterns and core values of user found in research. We made two personas to represent our potential users.</span>
 	</div>
