--- a/QJ_Farm.html
+++ b/QJ_Farm.html
@@ -95,8 +95,8 @@
 		
 		<h1 class="animated wow fadeInUp">User Research</h1>
 		<div class="animated wow fadeInUp">
-		<h2>Contextual Inquiry</h2>
-		<span>As part of field research, we mainly relied on contextual inquiry to gain insight of users. We not only conducted contextual inquiries on all workers at QJ farm including the owner and the manager but also conducted it on 5 event attendants and consumers.
+		<h2>Contextual Inquiry & Observations</h2>
+		<span>As part of field study, we mainly relied on contextual inquiry to gain insight of users. We not only conducted contextual inquiries on all workers at QJ farm including the owner and the manager but also conducted it on 5 event attendants and consumers.
 		<br>
 		By observing users directly and recording their attitude, mood, reaction during real tasks, it brought us the information we couldn’t retrieve from interview. Through notes, photos and videos from different person and perspectives, we were able to discuss and integrate the opinions afterward and finally catch the core value of that users care.
 		</span></div>
@@ -151,6 +151,7 @@
 
 	</section>
 
+
 	<hr class="animated wow fadeIn">
 
 
@@ -163,13 +164,32 @@
 	<span>Based on the behavior patterns and core values of user found in research. We made two personas to represent our potential users.</span>
 	</div>
 
+	<div class="animated wow fadeInDown">
+	<img class="persona" src="work/img/persona1.svg">
+	</div>
+	<div class="animated wow fadeInDown">
+	<img src="work/img/persona2.svg" class="persona"> 
+	</div>
 
-	<img src="work/img/persona1.svg" class="animated wow fadeIn">
-	<img src="work/img/persona2.svg" class="animated wow fadeIn"> 
+	<div class="animated wow fadeInDown">
+	<h2>Brainstorming</h2>
+	<span>At the first of ideation, we started from discussing with the farm manager. We all agreed that mobile app is the option with the most potential. Next, we did brainstorming to come up with what functions shall we include in our app. </span> 
+	</div>
+	<div class="animated wow fadeIn">
+	<img class="brainstorm" src="work/img/brainstorm.jpg">
+	</div>
+	</section>
+
+	<section class="brainstormconclusion">
+	<div class="animated wow fadeInDown">
+	<span>We treated three core values of user and three challenges of QJ Farm as our pillars. We came out of 50+ function first and chose those fitted the most in our user flow. Over iteration, we came out of the idea of “pre-order”. Pre-order not only allowed the farm to share the risk with consumer in other form but also met the core value of users. Based on our brainstorming, we made our first wireframe.</span>
+	</div>
 
 
 	</section>
 
+
+	<hr class="animated wow fadeIn">
 
 	<footer>
 		<div class="wrapper">
