--- a/QJ_Farm.html
+++ b/QJ_Farm.html
@@ -116,7 +116,7 @@
 		<img src="work/img/hourglass.svg">
 		<img src="work/img/update.svg">
 
-		<p id="d1"><mark>Unpredictable harvest</mark><br>Due to weather factor, harvest of the farm is <strong>unpredictable</strong>.</p> 
+		<p id="d1"><mark>Unpredictable harvest</mark><br>Due to weather or other factor, harvest of the farm is <strong>unpredictable</strong>.</p> 
 		<p id="d2"><mark>Short shelf life</mark><br>The products of QJ Farm are mainly fresh food which have a <strong>short shelf life</strong>.</p> 
 		<p id="d3"><mark>Inventory update</mark><br>Inventory data needs to be <strong>update frequently</strong> because of unpredictable harvest and short shelf life.</p> 
 	    </div>
@@ -182,7 +182,13 @@
 
 	<section class="brainstormconclusion">
 	<div class="animated wow fadeInDown">
-	<span>We treated three core values of user and three challenges of QJ Farm as our pillars. We came out of 50+ function first and chose those fitted the most in our user flow. Over iteration, we came out of the idea of “pre-order”. Pre-order not only allowed the farm to share the risk with consumer in other form but also met the core value of users. Based on our brainstorming, we made our first wireframe.</span>
+	<span>We treated three core values of user and three challenges of QJ Farm as our pillars. We came out of 50+ function first and chose those fitted the most in our user flow. Over iteration, we came out of the idea of “pre-order”. Pre-order not only allowed the farm to share the risk with consumers in other form but also met the core value of users. We listed our goals:<br><br>
+
+	•	<strong>Design an intuitive and user-friendly interface so that users can efficiently place their order or reserve for events <br><br>
+	•	Provide a platform which allows QJ Farm to update and sell their inventory easily and effectively<br><br>
+	•	Create connection between consumer and producer</strong><br><br>
+
+	Based on our goal-setting, we made our first wireframe.</span>
 	</div>
 
 
@@ -190,6 +196,17 @@
 
 
 	<hr class="animated wow fadeIn">
+
+	<!-- <section class="prototyping">
+		<h1>Wireframe and Prototype</h1>
+		<h2>Wireframe</h2>
+		<span>According to pre-order and supplyment, We made 5+ versions of wireframe.</span>
+		<img src="work/img/wireframeu.svg">
+		<img src="work/img/wireframefi.svg">
+		<img src="work/img/wireframefe.svg">
+
+	</section>
+ -->
 
 	<footer>
 		<div class="wrapper">
