--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 								</span>
 								<div class="desc">
 									<h3>Empathy</h3>
-									<p> Empathy is all about standing in someone's shoes and seeing from other's perspectives. As I regard myself as a user-centered designer, empathy is always my first priority.
+									<p> Empathy is all about standing in someone's shoes and seeing from other's perspectives. Regard myself as a user-centered designer, empathy is always my first priority.
 									</p>
 								</div>
 							</div>
