--- a/QJ_Farm.html
+++ b/QJ_Farm.html
@@ -39,7 +39,7 @@
 	<div class="overview">
 		<div class="animated wow fadeInDown">
 		<h2> Overview </h2>
-		<p>It is an app aims to provide a platform which allows consumers to pre-order products and reserve events of QJ farm. The project includes complete process of ux research, solution ideation and ui design. We’ve conduct over 100+ hour in field research and it is one of our proposals.  </p>
+		<p>It is an app aims to provide a platform which allows consumers to pre-order/order products and reserve events of QJ farm and also allows QJ Farm to undate and send their products easily. The project includes complete process of ux research, solution ideation and ui design. We’ve conduct over 100+ hour in field research and it is one of our proposals.  </p>
 	</div>
 		</div>
 
@@ -79,7 +79,7 @@
 		<h2 class="animated wow fadeInUp">Background</h2>
 		<span class="animated wow fadeInUp">CSA is abbreviation of “Community-Supported Agriculture”. It is an alternative socioeconomic model of agriculture and food distribution that allows the producer and consumer to share the risks of farming. When consumers sharing the risking with QJ CSA farm, they can gain the organic and eco-friendly farm products as return. 
 		<br><br>
-		QJ CSA Farm is a medium scale farm located at the edge of city. The farm practices in organic and eco-friendly agriculture without pesticide and chemistry involved. People can drive there from downtown within 30 minutes. There are two goals of QJ Farm. First one is to create stable income and job opportunity for urban indigenous people. Second one is to provide a place where people can get touch with nature and learn the knowledge of our daily food.  </span>	
+		QJ CSA Farm is a small/medium scale farm located at the edge of city. The farm practices in organic and eco-friendly agriculture without pesticide and chemistry involved. People can drive there from downtown within 30 minutes. There are two goals of QJ Farm. First one is to create stable income and job opportunity for urban indigenous people. Second one is to provide a place where people can get touch with nature and learn the knowledge of our daily food.  </span>	
 
 		<img class="animated wow fadeInUp" src="work/img/IMG_4625.jpg">
 
@@ -155,7 +155,7 @@
 	<hr class="animated wow fadeIn">
 
 
-	<section class="ideation">
+	<section class="ideation wrapper">
 	<div class="animated wow fadeInDown">
 	<h1>Ideation</h1>
 	</div>
@@ -180,7 +180,7 @@
 	</div>
 	</section>
 
-	<section class="brainstormconclusion">
+	<section class="brainstormconclusion wrapper">
 	<div class="animated wow fadeInDown">
 	<span>We treated three core values of user and three challenges of QJ Farm as our pillars. We came out of 50+ function first and chose those fitted the most in our user flow. Over iteration, we came out of the idea of “pre-order”. Pre-order not only allowed the farm to share the risk with consumers in other form but also met the core value of users. We listed our goals:<br><br>
 
@@ -197,16 +197,34 @@
 
 	<hr class="animated wow fadeIn">
 
-	<!-- <section class="prototyping">
+	<section class="wp wrapper">
 		<h1>Wireframe and Prototype</h1>
-		<h2>Wireframe</h2>
-		<span>According to pre-order and supplyment, We made 5+ versions of wireframe.</span>
+		<h2>How does it work?</h2>
+		<span>According to unpredictable supplement and pre-order, we made orders start from pending status after consumers placing their orders. The farm has to confirm that all of items in the order are available and then click “confirm order” to accept the order. We also designed a message section for consumers and producer to communicate directly and efficiently. </span>
+
+
+		<h2>For user</h2>
 		<img src="work/img/wireframeu.svg">
+
+		<h2>For items of QJ Farm</h2>
 		<img src="work/img/wireframefi.svg">
-		<img src="work/img/wireframefe.svg">
+
+		<h2> For events of QJ Farm</h2>
+		<img src="work/img/wireframefe.svg"> 
+
+		</section>
+
+		<section class="pp wrapper">
+		<h2>Paper prototying </h2>
+		<span>In order to discover potential breakdowns before hi-fi interface, we conducted paper prototype testing. With lo-fi wireframe, it helps users to focus on the flow of task and their needs.</span>
+
+		<img src="work/img/IMG_1838.jpg">
+		
+
+
 
 	</section>
- -->
+
 
 	<footer>
 		<div class="wrapper">
