--- a/QJ_Farm.html
+++ b/QJ_Farm.html
@@ -77,7 +77,7 @@
 
 	<section class="background wrapper">
 		<h2 class="animated wow fadeInUp">Background</h2>
-		<span class="animated wow fadeInUp">CSA is abbreviation of “Community-Supported Agriculture”. It is an alternative socioeconomic model of agriculture and food distribution that allows the producer and consumer to share the risks of farming. When consumers sharing the risking with QJ CSA farm, they can gain the organic and eco-friendly farm products as return. 
+		<span class="animated wow fadeInUp">CSA is abbreviation of “Community-Supported Agriculture”. It is an alternative socioeconomic model of agriculture and food distribution that allows the producer and consumer to share the risks of farming. When consumers sharing risks with QJ CSA farm, they can gain the organic and eco-friendly farm products as return. 
 		<br><br>
 		QJ CSA Farm is a small/medium scale farm located at the edge of city. The farm practices in organic and eco-friendly agriculture without pesticide and chemistry involved. People can drive there from downtown within 30 minutes. There are two goals of QJ Farm. First one is to create stable income and job opportunity for urban indigenous people. Second one is to provide a place where people can get touch with nature and learn the knowledge of our daily food.  </span>	
 
@@ -184,7 +184,7 @@
 	<div class="animated wow fadeInDown">
 	<span>We treated three core values of user and three challenges of QJ Farm as our pillars. We came out of 50+ function first and chose those fitted the most in our user flow. Over iteration, we came out of the idea of “pre-order”. Pre-order not only allowed the farm to share the risk with consumers in other form but also met the core value of users. We listed our goals:<br><br>
 
-	•	<strong>Design an intuitive and user-friendly interface so that users can efficiently place their order or reserve for events <br><br>
+	<strong>•	Design an intuitive and user-friendly interface so that users can efficiently place their order or reserve for events <br><br>
 	•	Provide a platform which allows QJ Farm to update and sell their inventory easily and effectively<br><br>
 	•	Create connection between consumer and producer</strong><br><br>
 
@@ -198,32 +198,42 @@
 	<hr class="animated wow fadeIn">
 
 	<section class="wp wrapper">
+		<div class="animated wow fadeInDown">
 		<h1>Wireframe and Prototype</h1>
 		<h2>How does it work?</h2>
 		<span>According to unpredictable supplement and pre-order, we made orders start from pending status after consumers placing their orders. The farm has to confirm that all of items in the order are available and then click “confirm order” to accept the order. We also designed a message section for consumers and producer to communicate directly and efficiently. </span>
+		</div>
 
+		<div class="animated wow fadeInUp">
 
 		<h2>For user</h2>
 		<img src="work/img/wireframeu.svg">
-
+		</div>
+		<div class="animated wow fadeInUp">
 		<h2>For items of QJ Farm</h2>
 		<img src="work/img/wireframefi.svg">
-
+		</div>
+		<div class="animated wow fadeInUp">
 		<h2> For events of QJ Farm</h2>
 		<img src="work/img/wireframefe.svg"> 
-
+		</div>
 		</section>
 
 		<section class="pp wrapper">
+		<div class="animated wow fadeInDown">
 		<h2>Paper prototying </h2>
-		<span>In order to discover potential breakdowns before hi-fi interface, we conducted paper prototype testing. With lo-fi wireframe, it helps users to focus on the flow of task and their needs.</span>
+		<span>In order to discover potential breakdowns before hi-fi interface, we conducted paper prototype testing. With lo-fi wireframe, it helps users to focus on the flow of task and their needs. Here was what we found: <br><br>
+
+		•	“Cart” section is confusing for the farm manipulating<br>
+		•	The location of cart is different from user’s experience<br>
+		•	Should search function be included<br>
+		•	Should there be filter for items and events<br> 
+
+		</span>
 
 		<img src="work/img/IMG_1838.jpg">
-		
-
-
-
-	</section>
+		</div>
+		</section>
 
 
 	<footer>
