--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 							</div>
 						</div></a>
 						<div class="row">
-						<div class="col-md-6 animate-box" data-animate-effect="fadeInDown">
+						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="project" style="background-image: url(images/img-5.jpg);">
 							<a href="QJ_Farm.html" target="blank"><div class="desc">
 									<div class="con">
@@ -213,7 +213,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 								</div>
 							</div>
 						</div></a>
-						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+						<div class="col-md-6 animate-box" data-animate-effect="fadeInTop">
 							<div class="project" style="background-image: url(images/img-2.jpg);">
 								<a href="vote.html" target="blank"><div class="desc">
 									<div class="con">
