--- a/QJ_Farm.html
+++ b/QJ_Farm.html
@@ -225,9 +225,11 @@
 		<span>In order to discover potential breakdowns before hi-fi interface, we conducted paper prototype testing. With lo-fi wireframe, it helps users to focus on the flow of task and their needs. Here was what we found: <br><br>
 
 		•	“Cart” section is confusing for the farm manipulating<br>
-		•	The location of cart is different from user’s experience<br>
-		•	Should search function be included<br>
+		•	The location of cart is different from user’s experience on goods page<br>
+		•	"Add to cart" button appears repeatedly on goods page<br> 
+		•	Should search function be included for message<br>
 		•	Should there be filter for items and events<br> 
+		
 
 		</span>
 
