--- a/QJ_Farm.html
+++ b/QJ_Farm.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>QJ Farm</title>
+	<title>QJ Farm App</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
 	<meta name="author" content="Eric Chi">
@@ -29,7 +29,7 @@
 		</header>
 
 		<div class="caption dark animated wow pulse clearfix">
-			<h1>QJ Farm</h1>
+			<h1>QJ Farm App</h1>
 			<p>UI/UX</p>
 			<hr>
 		</div>
@@ -182,13 +182,25 @@
 
 	<section class="brainstormconclusion wrapper">
 	<div class="animated wow fadeInDown">
-	<span>We treated three core values of user and three challenges of QJ Farm as our pillars. We came out of 50+ function first and chose those fitted the most in our user flow. Over iteration, we came out of the idea of “pre-order”. Pre-order not only allowed the farm to share the risk with consumers in other form but also met the core value of users. We listed our goals:<br><br>
+	<span>We treated three core values of user and three challenges of QJ Farm as our pillars. We came out of 50+ function first and chose those fitted the most in our user flow. Over iteration, we came out of five functions:<br><br>
+
+		<strong>1. Items: Buy and sell products of farm with pre-order. Pre-order not only allows the farm to share the risk with consumers in other form but also meets the core value of users.<br><br>
+		2. Events: Create and reserve events <br><br>
+		3. Recipes: Users have to cook almost everything that bought from the farm so recipe is a powerful tool to attract users to come back even after purchasing.<br><br>
+		4. Plants: A planting simulation game aims to motivate users check the app frequently. When users harvest something on the app, when can gain real stuff from the farm in next order. We add weather condition in the game in order to create empathy and connection with farmers.<br><br>
+		5. Message: User can send message directly to QJ Farm. It helps both side to communicate efficiently and easily. <br><br></strong>
+
+
+		We listed three goals as well:<br><br>
+
+
+
 
 	<strong>•	Design an intuitive and user-friendly interface so that users can efficiently place their order or reserve for events <br><br>
 	•	Provide a platform which allows QJ Farm to update and sell their inventory easily and effectively<br><br>
 	•	Create connection between consumer and producer</strong><br><br>
 
-	Based on our goal-setting, we made our first wireframe.</span>
+	Based on our main functions and goals, we made our first wireframe.</span>
 	</div>
 
 
@@ -206,16 +218,12 @@
 
 		<div class="animated wow fadeInUp">
 
-		<h2>For user</h2>
+		<h2>For users</h2>
 		<img src="work/img/wireframeu.svg">
 		</div>
 		<div class="animated wow fadeInUp">
-		<h2>For items of QJ Farm</h2>
+		<h2>For QJ Farm</h2>
 		<img src="work/img/wireframefi.svg">
-		</div>
-		<div class="animated wow fadeInUp">
-		<h2> For events of QJ Farm</h2>
-		<img src="work/img/wireframefe.svg"> 
 		</div>
 		</section>
 
@@ -224,11 +232,8 @@
 		<h2>Paper prototying </h2>
 		<span>In order to discover potential breakdowns before hi-fi interface, we conducted paper prototype testing. With lo-fi wireframe, it helps users to focus on the flow of task and their needs. Here was what we found: <br><br>
 
-		•	“Cart” section is confusing for the farm manipulating<br>
 		•	The location of cart is different from user’s experience on goods page<br>
-		•	"Add to cart" button appears repeatedly on goods page<br> 
-		•	Should search function be included for message<br>
-		•	Should there be filter for items and events<br> 
+
 		
 
 		</span>
