--- a/QJ_Farm.html
+++ b/QJ_Farm.html
@@ -230,18 +230,41 @@
 		<section class="pp wrapper">
 		<div class="animated wow fadeInDown">
 		<h2>Paper prototying </h2>
-		<span>In order to discover potential breakdowns before hi-fi interface, we conducted paper prototype testing. With lo-fi wireframe, it helps users to focus on the flow of task and their needs. Here was what we found: <br><br>
+		<span>In order to discover potential breakdowns before hi-fi interface, we conducted paper prototype testing. With lo-fi wireframe, it helps users to focus on the flow of task and their needs. Here were some of what we found: <br><br>
 
 		•	The location of cart is different from user’s experience on goods page<br>
+		•	“Cart” section is confusing for the farm manipulating<br>
+		•	The location of cart is different from user’s experience<br>
+		•	Should search function be included<br>
+		•	Should there be filter for items and events<br><br>
 
-		
+		and son on. <br>After revising over and over, we made our first hi-fi prototype.
+
+	
 
 		</span>
 
 		<img src="work/img/IMG_1838.jpg">
 		</div>
+
+
 		</section>
 
+
+		<hr>
+
+
+
+		<section class="pt wrapper">
+			<h1 class="animated wow fadeInDown">Final Design</h1>
+
+		<h2 class="animated wow fadeInDown">Purchase items and reserve events for users</h2>
+
+
+			
+	<iframe class="animated wow fadeIn" style="border: none;" width="1000px" height="700px" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FKmcRpxqDKA4XvMbqCk7XlBI1%2FPurchase-items-Reserve-events%3Fnode-id%3D0%253A1%26viewport%3D-1242%252C-450%252C0.296851%26scaling%3Dscale-down" allowfullscreen></iframe>
+		
+</section>
 
 	<footer>
 		<div class="wrapper">
